refactor: updates to the actor-based model | added: software architecture additions

--- a/memos/total-energies/2024-12-13-brian-and-valentin/status_update.tex
+++ b/memos/total-energies/2024-12-13-brian-and-valentin/status_update.tex
@@ -62,8 +62,7 @@ There are more than these three layers, but I hope that they convey that it conv
 \subsection{Separating Responsibilites}
 Brian mentioned at the previous meeting that for this kind of system it would be crucial that
 each stakeholder that we want to be part of the system has clearly defined boundaries for what
-they can and cannot change. Below I have included a small piece of code from the program to 
-highlight what I mean. 
+they can and cannot change. In appendix \
 
 \section{Academic Papers}
 I unfortunately have to write academic papers even though we do not have solid results yet.
