--- a/memos/total-energies/2024-12-13-brian-and-valentin/tecnical_appendix.tex
+++ b/memos/total-energies/2024-12-13-brian-and-valentin/tecnical_appendix.tex
@@ -1,6 +1,6 @@
 \newpage
 \section{Appendix}
-\subsection{Illustrative Code Parts}
+\subsection{Illustrative Code Parts}\label{sec:separating-concerns}
 \texttt{\detokenize{pub struct UserStatusCodes {
     pub appr: bool, 
     pub smat: bool, 
