--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -1,3 +1,48 @@
+@misc{scipo-code-ordinator_api,
+	author = {Scipo},
+	title = {Ordinator Api},
+	howpublished = {\url{https://github.com/scipo-code/ordinator.api}},
+	year = {2024},
+	note = {Version 0.2.1},
+}
+
+@book{richards_fundamentals_2020,
+	title = {Fundamentals of Software Architecture: An Engineering Approach},
+	isbn = {978-1-4920-4342-3},
+	shorttitle = {Fundamentals of Software Architecture},
+	abstract = {Salary surveys worldwide regularly place software architect in
+	            the top 10 best jobs, yet no real guide exists to help developers
+	            become architects. Until now. This book provides the first
+	            comprehensive overview of software architecture’s many aspects.
+	            Aspiring and existing architects alike will examine architectural
+	            characteristics, architectural patterns, component determination,
+	            diagramming and presenting architecture, evolutionary
+	            architecture, and many other topics.Mark Richards and Neal
+	            Ford—hands-on practitioners who have taught software architecture
+	            classes professionally for years—focus on architecture principles
+	            that apply across all technology stacks. You’ll explore software
+	            architecture in a modern light, taking into account all the
+	            innovations of the past decade.This book examines:Architecture
+	            patterns: The technical basis for many architectural {
+	            decisionsComponents}: Identification, coupling, cohesion,
+	            partitioning, and {granularitySoft} skills: Effective team
+	            management, meetings, negotiation, presentations, and {
+	            moreModernity}: Engineering practices and operational approaches
+	            that have changed radically in the past few {yearsArchitecture}
+	            as an engineering discipline: Repeatable results, metrics, and
+	            concrete valuations that add rigor to software architecture},
+	pagetotal = {422},
+	publisher = {"O'Reilly Media, Inc."},
+	author = {Richards, Mark and Ford, Neal},
+	date = {2020-01-28},
+	langid = {english},
+	note = {Google-Books-{ID}: xa7MDwAAQBAJ},
+	keywords = {Computers / Distributed Systems / General, Computers / Software
+	            Development \& Engineering / General, Computers / Software
+	            Development \& Engineering / Systems Analysis \& Design,
+	            Computers / Software Development \& Engineering / Tools},
+}
+
 @misc{w.edwardsdemingOutCrisis,
 	title = {Out of the {{Crisis}}},
 	author = {W. Edwards Deming},
