--- a/tex/definitions.tex
+++ b/tex/definitions.tex
@@ -36,7 +36,7 @@
 \newcommand{\ParStrategicValue}[1][\VarMetaTime]{strategic\_value_{\ElementWorkOrder \ElementPeriod}(#1)}
 \newcommand{\ParStrategicPenalty}{strategic\_penalty}
 \newcommand{\ParClusteringValue}{clustering\_value_{\ElementWorkOrder1, \ElementWorkOrder2}}
-\newcommand{\ParStrategicResource}{resource_{\ElementPeriod\ElementResource}(\VarMetaTime, \VarTacticalWork{}{})}
+\newcommand{\ParStrategicResource}[1]{resource_{\ElementPeriod\ElementResource}(\VarMetaTime#1)}
 
 \newcommand{\ParStrategicWorkOrderWeight}{work\_order\_work_{\ElementWorkOrder \ElementResource}}
 \newcommand{\ParStrategicInclude}{include_{\ElementWorkOrder\ElementPeriod}(\VarMetaTime)}
