--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -4,7 +4,7 @@ efficient and effective execution. This thesis will propose a generalized multi-
 maintenance scheduling to more forward similar approaches will have to be adopted. Other approaches may be very different but they will share many 
 of the aspects. 
 
-This Ph.D. will present a generalized dynamic multi-model approach to maintenance scheduling which will be model after a practical maintenance handbook \cite{palmer_maintenance_2019}.
+This Ph.D. will present a generalized dynamic multi-model approach to maintenance scheduling which will be model after a practical maintenance handbook \cite{main}.
 \begin{table}
 	\begin{tabular}{@{}call@{}}
 		\toprule
