--- a/papers/actor-based-large-neighborhood-search/tex/introduction.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/introduction.tex
@@ -71,15 +71,19 @@ scheduling are handled by \textbf{dynamic rescheduling between the actors}.
 	\label{fig:integrated:maintenance-process}
 \end{figure}
 
-The main contribution of this article is to provide a modular scalable optimization component, 
-based on a proven metaheuristic to support a business process composed from smaller mathematical 
-models in a framework, instead of a larger integrated mathematical model.
+The main contribution of this article is to provide a
+modular scalable optimization component,  based on a proven
+metaheuristic to support a business process composed from
+smaller mathematical  models in a framework, instead of a
+larger integrated mathematical model.
 
 The paper is divided into four different sections. Section \ref{sec:2-solution-method} explains
 the weekly maintenance scheduling model in detail and forms the foundation of the paper. 
 Section \ref{sec:3-results} shows the results that come from the metaheuristic implemented,
 where it will be affected by the simulated user interaction. Section \ref{sec:4-discussion} 
 will discuss the implications of the research and estabslish a future research direction.
+All source code for the implemented system can be found at \citep{scipo-code-ordinator_api},
+instance data is confidential and cannot be shared publicly.
 
 \subsection{The Weekly (Period) Maintenance Scheduling Model}
 The weekly maintenance scheduling model for the problem
@@ -103,7 +107,7 @@ varies and is reflected in a "tardiness" for carrying out a maintenance work
 order in a certain period given by $\ParStrategicValue$. The $\ParStrategicValue$ also
 captures the tardiness of the individual work orders ($\ElementWorkOrder$), meaning that
 the value gained from scheduling work orders late is decreasing. Urgent tasks have
-decresing value the further out the period $\ElementPeriod$ becomes.
+decreasing value the further out the period $\ElementPeriod$ becomes.
 Furthermore, two sets exists which will either require work order $\ElementWorkOrder$ to be carried
 out in period $\ElementPeriod$ or not carried out in a period $\ElementPeriod$.
 These sets are $(\ElementWorkOrder,\ElementPeriod) \in
@@ -111,12 +115,11 @@ These sets are $(\ElementWorkOrder,\ElementPeriod) \in
 \ParStrategicExclude$ for exclusion.
 
 \input{../../tex/models/strategic.tex}
-\strategicmodel[clustering=false]
+\strategicmodel[clustering=true, beta=false]
 
 The meta variables defines the broader setting that the model in implemented in.
 Equation~\eqref{eqn:meta:scheduler:strategic} specicies that the model is
-implemented for scheduler \ElementScheduler. Equation~\eqref{eqn:meta:tactical:strategic} is the value
-of a decision variable coming from a different model, here the supervisor.
+implemented for scheduler \ElementScheduler. 
 Equation~\eqref{eqn:meta:time:strategic} is the time variable that binds the whole
 system together.
 
